fix spacing of buttons on edit page

--- a/ui/v2.5/src/index.scss
+++ b/ui/v2.5/src/index.scss
@@ -134,10 +134,6 @@ dd {
     transition: 0.2s;
   }
 
-  .details-edit div:nth-last-child(2) {
-    flex: unset;
-  }
-
   h2 {
     margin-bottom: 0;
   }
